# HittingSetPace

./: .gitignore  Cargo.toml  LICENSE  README.md  analyse_all.sh  old_settings.json  setting_uniform_deg.json  settings.json  settings_no_ilp.json  settings_no_reduction.json
benchmark/: bremen_subgraph_100.sol  bremen_subgraph_150.sol  bremen_subgraph_20.sol  bremen_subgraph_200.sol  bremen_subgraph_250.sol  bremen_subgraph_300.sol  bremen_subgraph_50.sol
evaluation/: graph_data_eval.ipynb
output/: exact_001.gr_graph-data.json  exact_001.gr_graphviz.dot  exact_002.gr_graph-data.json  exact_002.gr_graphviz.dot  exact_003.gr_graph-data.json  exact_003.gr_graphviz.dot  exact_004.gr_graph-data.json  exact_004.gr_graphviz.dot  exact_005.gr_graph-data.json  exact_005.gr_graphviz.dot  exact_006.gr_graph-data.json  exact_006.gr_graphviz.dot  exact_007.gr_graph-data.json  exact_007.gr_graphviz.dot  exact_008.gr_graph-data.json  exact_008.gr_graphviz.dot  exact_009.gr_graph-data.json  exact_009.gr_graphviz.dot  exact_010.gr_graph-data.json  exact_010.gr_graphviz.dot  exact_011.gr_graph-data.json  exact_011.gr_graphviz.dot  exact_012.gr_graph-data.json  exact_012.gr_graphviz.dot  exact_013.gr_graph-data.json  exact_013.gr_graphviz.dot  exact_014.gr_graph-data.json  exact_014.gr_graphviz.dot  exact_015.gr_graph-data.json  exact_015.gr_graphviz.dot  exact_016.gr_graph-data.json  exact_016.gr_graphviz.dot  exact_017.gr_graph-data.json  exact_017.gr_graphviz.dot  exact_018.gr_graph-data.json  exact_018.gr_graphviz.dot  exact_019.gr_graph-data.json  exact_019.gr_graphviz.dot  (+100 more)
(+57 files in other folders)
