[package]
name = "hitdomsolver"
version = "0.1.0"
authors = ["Patrick Steil <patrick.steil@student.kit.edu>", "Mariette Vasen <mariette.vasen@student.kit.edu>"]
edition = "2021"
license = "MIT"
description = "An experimental solver for hitting set and/or dominating set in the context of the pace 2025 challenge"
homepage = "https://github.com/PatrickSteil/HittingSetPace"
repository = "https://github.com/PatrickSteil/HittingSetPace"
documentation = "https://github.com/PatrickSteil/HittingSetPace"
readme = "README.md"
categories = ["command-line-utilities", "science"]
keywords = ["hitting-set", "solver", "research"]
exclude = ["evaluation/*"]

[features]
debug-skipvec = []
default = []
optilio = []

[dependencies]
anyhow = "1.0"
derivative = "2.1"
env_logger = "0.9"
glpk-sys = "0.2.0"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
# rsmaxsat = "0.1.1"    # Does not build on my machine
rustc-hash = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
structopt = "0.3"
itertools = "0.14.0"
rustworkx-core = "0.16"
csv = "1.3"
rand = "0.8.5"

[profile.release]
lto = true
